# signal-engine

./: .gitignore  MIGRATION_NOTES.md  pyproject.toml
.claude/docs/: ARCHITECTURE.md  COMPETITIVE_LANDSCAPE.md  CONTEXT.md  CONTRIBUTING.md  DATA_GOVERNANCE.md  DATA_MODEL.md  DECISION_LOG.md  DOCUMENT_PROCESSING.md  DOMAIN_GLOSSARY.md  ETHICS_AND_LIMITATIONS.md  EVENTS_AND_PIPELINES.md  FAILURE_MODES.md  INGESTION_SPEC.md  MODEL_STRATEGY.md  NARRATIVE_ANALYSIS.md  NEXT_STEPS.md  OBSERVABILITY.md  README.md  RESEARCH_NOTES.md  ROADMAP.md  SEARCH_AND_RETRIEVAL.md  SECURITY_AND_PRIVACY.md  SIGNAL_DEFINITIONS.md  TESTING_STRATEGY.md  USER_EXPERIENCE.md  VISION.md
.claude/tmp/: note.md
config/: entities.json  hedging_lexicon.json  themes.json  v1_companies.json
docs/: API_SPEC.md  ASSUMPTIONS.md  CODE_STANDARDS.md  CONTEXT.md  DATA_ACQUISITION.md  DECISION_LOG.md  EVALUATION.md  EXPERIMENTATION.md  SCOPE.md
src/signal_engine/: README.md  __init__.py  io.py  paths.py
src/signal_engine/analysis/: __init__.py  baselines.py  feature_primitives.py  features.py  press_release_features.py
src/signal_engine/cli/: __init__.py  analyze.py  audio_batch.py  audio_discover.py  audio_fetch.py  audio_normalize.py  audio_transcribe.py  baseline.py  detect.py  edgar_fetch.py  edgar_press_releases.py  features.py  pdf_batch.py  pdf_discover.py  pdf_fetch.py  pdf_manifest.py  pdf_normalize.py  review.py  v1_ingest.py
src/signal_engine/config/: __init__.py  companies.py  lexicons.py  themes.py
tests/: test_detectors.py  test_features.py  test_lexicons.py  test_signal_anatomy.py
(+41 files in other folders)
